--- a/index.html
+++ b/index.html
@@ -93,13 +93,78 @@
                 </div>
             </div>
             <div class="one-two">
+
+                <div class="one">
                 <img src="./Images/Rectangle 5.png" alt="">
-                <img src="./Images/Rectangle 6.png" alt="">
-                <img src="./Images/Rectangle 7.png" alt="">
                 <img src="./Images/Rectangle 8.png" alt="">
-                <img src="./Images/Rectangle 8 (1).png" alt="">
-                <img src="./Images/Rectangle 9.png" alt="">
+                </div>
+
+                <div class="two">
+                <img src="./Images/Rectangle 7.png" alt="">
                 <img src="./Images/Rectangle 10.png" alt="">
+                <img src="./Images/Rectangle 8 (1).png" alt="">
+                </div>
+
+                <div class="three">
+                <img src="./Images/Group 39.png" alt="">
+                <img src="./Images/Group 40089.png" alt="">
+                </div>
+                
+            </div>
+            <div class="choose-container">
+                <h1 class="Choose-h1">Why Choose Us</h1>
+                <p>This is Our popular tour.Let,s go indonesia.Go To beach
+                    Go to swiming pool for swim . Only20$</p>
+            </div>
+            <div class="choose-middle">
+
+                <div class="choose-middle-1">
+                <img src="./Images/hotel 1.svg" alt="">
+                <h1>Choose Your Destination</h1>
+                <p>This is Our popular tour.Let,s go indonesia.Go To beach
+                    Go to swiming pool for swim . Only20$ </p>
+                </div>
+
+                <div class="choose-middle-2">
+                    <img src="./Images/price-tag 1.png" alt="">
+                <h1>Choose Your Destination</h1>
+                <p>This is Our popular tour.Let,s go indonesia.Go To beach
+                    Go to swiming pool for swim . Only20$ </p>
+                </div>
+            </div>
+            <div class="choose-last">
+                <img src="./Images/map 1.svg" alt="">
+                <h1>Choose Your Destination</h1>
+                <p>This is Our popular tour.Let,s go indonesia.Go To beach
+                    Go to swiming pool for swim . Only20$ </p>
+            </div>
+            <div class="form-pic">
+                <div class="input">
+                    <br>
+                <br>
+                <h3>Newsletter</h3>
+                <br>
+                <p>Get your daily dose of travel news & tips. Sign up today!</p>
+                <input type="text" placeholder="Enter your name">
+                <br>
+                <br>
+                
+                <input type="email" required placeholder="Your mail">
+                <br>
+                <br>
+                <br>
+                <br>
+                <button class="button">Subscribe</button>
+                </div>
+                <div class="pic-text">
+                    <div class="p-img">
+                    <img src="./Images/Rectangle 5.png" alt="">
+                    </div>
+                    <div class="p-text">
+                    <h class="discount">Travel.com Save up to 70%
+                    </h>
+                    </div>
+                </div>
             </div>
     </body>
 
