--- a/index.html
+++ b/index.html
@@ -166,11 +166,34 @@
                     </div>
                 </div>
             </div>
+            <div class="last">
+                <img src="./Images/logo.png" alt="">
+            <h1>Indonesia Travel Agency</h1>
+            </div>
+            <br>
+            <br>
+            <h3 class="last-text">
+                This is Our popular tour.Let,s go indonesia.Go To beach
+                    Go to swiming pool for swim . Only20$
+            </h3>
+            <br>
+            <br>
+            <div class="icon">
+                <img src="./icon/Twitter.png" alt="">
+                <img src="./icon/Instagram.png" alt="">
+                <img src="./icon/Linkedin.png" alt="">
+                <img src="./icon/Facebook.png" alt="">
+            </div>
+            <br>
+            <hr style="color: gray;size: 2px;
+            width: 90%; margin: 0 auto; ">
+            <br>
     </body>
 
     <footer>
-
+        <p style="color: gray;text-align: center;">2017,All Right Reserved </p>
+        <br>
     </footer>
-</body>
+
 
 </html>
