Need More Time for good deburg

--- a/index.html
+++ b/index.html
@@ -172,14 +172,12 @@
                 
                 <input type="email" required placeholder="Your mail">
                 <br>
-                <br>
-                <br>
-                <br>
+                
                 <button class="button">Subscribe</button>
                 </div>
                 <div class="pic-text">
                     <div class="p-img">
-                    <img src="./Images/Rectangle 5.png" alt="">
+                    <img style="width: 100%;" src="./Images/Rectangle 5.png" alt="">
                     </div>
                     <div class="p-text">
                     <h class="discount">Travel.com Save up to 70%
@@ -187,33 +185,65 @@
                     </div>
                 </div>
             </div>
-            <div class="last">
-                <img src="./Images/logo.png" alt="">
-            <h1>Indonesia Travel Agency</h1>
+            <div class="bonus-deal">
+                <h1>Deals & Discounts</h1>
+                <p>This is Our popular tour.Let,s go indonesia.Go To beach
+                    Go to swiming pool for swim . Only20$</p>
+            </div> 
+
+            <div class="bonus-deal-1">
+            <img class="bdi-1" src="./Images/Rectangle 10.png" alt=""> 
+            <div class="bp-1">
+            <h2 class="bh1">This is Our popular tour. <br>Let,s go indonesia. 
+             <br>Go To beach
+            Go to swiming pool for swim . Only20$</h2>
+            <button class="button">Book Now</button>
             </div>
-            <br>
-            <br>
-            <h3 class="last-text">
-                This is Our popular tour.Let,s go indonesia.Go To beach
-                    Go to swiming pool for swim . Only20$
-            </h3>
-            <br>
-            <br>
-            <div class="icon">
-                <img src="./icon/Twitter.png" alt="">
-                <img src="./icon/Instagram.png" alt="">
-                <img src="./icon/Linkedin.png" alt="">
-                <img src="./icon/Facebook.png" alt="">
             </div>
-            <br>
-            <hr style="color: gray;size: 2px;
-            width: 90%; margin: 0 auto; ">
-            <br>
+
+            <div class="bonus-deal-2">
+            <img class="bdi-2" src="./Images/Rectangle 10.png" alt=""> 
+            <div class="bp-2">
+            <h2 class="bh2">This is Our popular tour. <br> Let,s go indonesia. <br> Go To beach
+            Go to swiming pool for swim . Only20$</h2>
+            <button class="button">Book Now</button>
+            </div>
+            </div>
+
+
+            <div class="bonus-deal-3">
+            <img class="bdi-3" src="./Images/Rectangle 10.png" alt=""> 
+            <div class="bp-3">
+            <h2 class="bh3">This is Our popular tour. <br> Let,s go indonesia. <br> Go To beach
+            Go to swiming pool for swim . Only20$</h2>
+            <button class="button">Book Now</button>
+            </div>
+            </div>
     </body>
 
+
+
+
     <footer>
+        <div class="last">
+            <img src="./Images/logo.png" alt="">
+        <h1>Indonesia Travel Agency</h1>
+        </div>
+        <h3 class="last-text">
+            This is Our popular tour.Let,s go indonesia.Go To beach
+                Go to swiming pool for swim . Only20$
+        </h3>
+
+        <div class="icon">
+            <img src="./icon/Twitter.png" alt="">
+            <img src="./icon/Instagram.png" alt="">
+            <img src="./icon/Linkedin.png" alt="">
+            <img src="./icon/Facebook.png" alt="">
+        </div>
+
+        <hr style="color: gray;size: 2px;
+        width: 90%; margin: 0 auto; ">
         <p style="color: gray;text-align: center;">2017,All Right Reserved </p>
-        <br>
     </footer>
 
 
