--- a/index.html
+++ b/index.html
@@ -219,6 +219,24 @@
             <button class="button">Book Now</button>
             </div>
             </div>
+            <button class="button1">See All Package</button>
+            <div class="la-bonus">
+                <div class="la-p">
+                    <br>
+                    <h1>A Simple Perfect Place To Get Lost</h1>
+                    <p>This is Our popular tour. <br>Let,s go indonesia. 
+                        <br>Go To beach
+                       Go to swiming pool for swim . Only20$</p>
+                       <br>
+                       <p>This is Our popular tour. <br>Let,s go indonesia. 
+                        <br>Go To beach
+                       Go to swiming pool for swim . Only20$</p>
+                       <button class="button">See More</button>
+                </div> 
+                <div class="la-vidio">
+                    <video class="vid" controls src="./Images/video.mp4"></video>
+                </div>
+            </div>
     </body>
 
 
