--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 2</title>
      <link rel="stylesheet" href="./Style/blog.css">
+     <link rel="stylesheet" href="./Style/Resposibe.css">
 </head>
 
 <body>
@@ -244,7 +245,7 @@
 
     <footer>
         <div class="last">
-            <img src="./Images/logo.png" alt="">
+            <img class="i-logo" src="./Images/logo.png" alt="">
         <h1>Indonesia Travel Agency</h1>
         </div>
         <h3 class="last-text">
